crates/rustframe/tests/ui/fail/module_requires_metadata.rs
use rustframe::Module;

#[derive(Module)]
struct AppModule;

fn main() {}
